Enable Mention Notification Plugin on Kudos